--- a/examples/hello-world/ml-to-fl/pt/src/khoa.ipynb
+++ b/examples/hello-world/ml-to-fl/pt/src/khoa.ipynb
@@ -1099,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nvflare_example",
+   "display_name": "khoa",
    "language": "python",
    "name": "python3"
   },
@@ -1113,7 +1113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
